# ALTOSNIZA-PolimorfismoPruebas

./: CMakeLists.txt  readme.md  respuestas.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
src/Model/: Admin.cpp  Admin.h  Fundador.cpp  Fundador.h  Propiedad.cpp  Propiedad.h  Propietario.cpp  Propietario.h  Reventa.cpp  Reventa.h
src/View/: View.cpp  View.h
test/: AdminTest.cpp  PropietarioTest.cpp
